client/src/style/css/Map.css
.artistMarker {
    width: 25px;
    height: 25px;
    border-radius: 50%; 
    background-size: cover;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 0;
}
  
/* .artistMarker > p {
    font-size: 5px;
    color:#fff;
    font-family: PhillySans;
    display: inline-block;
    position: absolute;
    text-overflow: ellipsis; 
    white-space: nowrap;   
} */

/* .cityMarker { 
    width: 100px;
    height: 100px;
    border-radius: 50%; 
    background-color:rgba(147, 129, 255, 0.85);


    display: flex;
    justify-content: center;
    align-items: center;
}

.cityMarker > p {
    font-size: 15px;
    color:#fff;
    font-family: PhillySans;
    display: inline-block;
    position: absolute;
    text-overflow: ellipsis; 
    white-space: nowrap;   
} */

.homeButton {
    margin-left: 8vw;
    margin-top: 4.2vh; 
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: #fff;
    border-radius: 50%;
    width: 12vw;
    height: 12vw;
    z-index: 1;
}

.homeButton > div > svg {
    width: 10vw;
    height: 10vw;
}

.shuffleArtistButton > div {
    margin-bottom: 45vh;
    margin-right: 25vw;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: #9381FF;
    border-radius: 50%;
    width: 15vw;
    height: 15vw;
    z-index: 1;
}

.shuffleArtistButton > div > svg {
    width: 12vw;
    height: 12vw;
}

.closeConnectionsButton > div {  
    margin-bottom: 85vh;
    margin-right: 25vw;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: #ff6f59;
    border-radius: 50%;
    width: 15vw;
    height: 15vw;
    z-index: 1;
}

.closeConnectionsButton > div > svg {
    width: 12vw;
    height: 12vw;
}

.openFilterMenuButton > div {
    margin-bottom: 65vh;
    margin-right: 25vw;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: #9381FF;
    border-radius: 50%;
    width: 15vw;
    height: 15vw;
    z-index: 1;
}

.openFilterMenuButton > div > svg {
    width: 12vw;
    height: 12vw;
}
 
.map-container {
    height: 100vh;
    width: 100vw;
}

